fix navbar collapse color + position

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -7,8 +7,7 @@
 
 .navbar-nav {
    display: flex;
-   justify-content: center;
-   gap: 2em;
+   justify-content: space-around;
    width: 100%;
    button {
       border: 0;
@@ -16,10 +15,11 @@
 }
 
 .nav-link {
-   color: $pine;
+   color: $pine !important;
    font-family: $font-acme;
    font-weight: bold;
    font-size: 1.2em;
+   margin-left: 0.8em;
 }
 
 .disabled {
@@ -28,6 +28,7 @@
 
 a {
    position: relative;
+   white-space: nowrap;
 }
 
 nav a:hover {
@@ -43,4 +44,19 @@ nav a:hover::after {
    border: 1.2px solid $pine;
    background-color: $pine;
    @include rounded;
+}
+
+.navbar-nav {
+   background-color: $turquoise;
+   border-bottom-left-radius: 0.5em;
+   border-bottom-right-radius: 0.5em;
+}
+
+.navbar-collapse {
+   margin-top: 3px !important;
+}
+
+.navbar-toggler-icon {
+   width: 15px;
+   height: 22px;
 }
